# 202602_chess_opening_eval

./: .gitignore  README.md  package-lock.json  package.json
convert_lichess_eval_to_sqlite/: convert.py
design/: 20260227_design.md
notebooks/: 20260227_start_black.ipynb  20260227_start_white.ipynb
rust_read_rocksdb_eval/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  service.d.ts  service.js  tsconfig.json
rust_read_rocksdb_eval/src/: lib.rs
rust_read_rocksdb_eval/tests/: addon.test.ts
src/: board.ts  cache.ts  cli.ts  evaluator.ts  fen.ts  types.ts
src/api/: chesscom.ts  lichess.ts  retry.ts
tests/: board.test.ts  cache.test.ts  chesscom.test.ts  evaluator.test.ts  lichess.test.ts  retry.test.ts
