[package]
name = "rust_read_rocksdb_eval"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
napi = { version = "2", default-features = false, features = ["napi6", "tokio_rt"] }
napi-derive = "2"
once_cell = "1"
rocksdb = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shakmaty = "0.28"

[build-dependencies]
napi-build = "2"
